---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 23.03.25
  Changes:
    - Made Tile speed configurable. StoneBrick, Concrete, RenfiorcedConcrete,
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 05.02.2025
  Changes:
    - local DRI, DRR, DRT, SS, Mods
  Bugfixes:
    - Issue with stack size witout bigbags for landfill.
  Locale:
    - Added es-ES.
  Credit:
    - Thanks (lucerattow) @BlackkLotus es-ES Locals.
    - Thanks (lucerattow) @BlackkLotus landfill stacksize.
    - Thanks (lucerattow) @BlackkLotus https://github.com/SGZ-Creations/Configurable-Landfill/pull/1
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 25.01.2025
  Features:
    - Added settings for [item=concrete] & [item=refined-concrete].
  Bugfixes:
    - Crash with Logistic Transport Drones mod. Was accidently needing [space-age] to be active.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 11.01.2025
  Bugfixes:
    - Added require file that was forgotten in 0.1.3 release.
    - Transport drones wrong recipe ID.
    - Transport drones wrong item ID
  Changes:
    - [space-age] Added "? Space age" in optional.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 11.01.2025
  Features:
    - [space-age] Space Platform Foundation.
    - Roads.
  Modding:
    - Tranport Drones.
  Info:
    - Note: Only use one Transport Drone mod should both end up working.
  Locale:
    - DE locales are mostly in EN.
    - Should some NO or EN locales be incorect/Missing please let me know. Note: EN=EU/UK. To best of ability.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 10.11.2024