@@ -10,6 +10,7 @@
     "? space-age",
     "? BigBags",
     "? Transport_Drones",
-    "? Transport_Drones_Meglinge_Fork"
+    "? Transport_Drones_Meglinge_Fork",
+    "? Dectorio"
   ]
 }
