@@ -37,15 +37,19 @@ road-results=[item=road][color=black]Output amount[/color]
 road-energy=[color=black]Seconds to craft[/color][item=road]
 froad-results=[item=fast-road][color=black]Output amount[/color]
 froad-energy=[color=black]Seconds to craft[/color][item=fast-road]
-[mod-setting-description]
 
+#Dectroio
+DectWoodSpeed=[item=dect-wood-floor][color=brown]Tile Speed[/color]
+DectConcreteGridSpeed=[item=dect-concrete-grid][color=#D3D3D3]Tile Speed[/color]
+
+[mod-setting-description]
 #Base Game
 landfill-unlocked-from-start=[color=red]Maybe irreversible if enabled.[/color]
-StoneBrickSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=stone-brick]
-ConcreteSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=concrete]
-HazardConcreteSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=hazard-concrete]
-RefinedConcreteSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-concrete]
-HazardRefinedConcreteSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-hazard-concrete]
+StoneBrickSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=stone-brick]
+ConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=concrete]
+HazardConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=hazard-concrete]
+RefinedConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-concrete]
+HazardRefinedConcreteSpeed=[color=red]Warning: value below 1% has unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=refined-hazard-concrete]
 
 #[space-age]
 space-platform-foundation-results=Space Platform Foundation production result.\nRevert to [space-age] default vaules by clicking the reset button.
@@ -75,3 +79,7 @@ road-energy=Road production time.\nRevert to [item=road] default vaules by click
 
 froad-results=Fast Road.\nRevert to [item=fast-road] default vaules by clicking the reset button
 froad-energy=Fast Road production time.\nRevert to [item=fast-road] default vaules by clicking the reset button
+
+#Dectroio
+DectWoodSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color]\n[color=brown]100% = 1, 1% = 0.01[/color]
+DectConcreteGridSpeed=[color=red]Warning: value below 1% unexpected effcts.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color]
