@@ -36,8 +36,12 @@ road-results=[color=black]Mengde[item=road]Laget[/color]
 road-energy=[color=black]Tid i sekunder[/color][item=road]
 froad-results=[color=black]Mengde[item=fast-road]Laget[/color]
 froad-energy=[color=black]Tid i sekunder[/color][item=fast-road]
-[mod-setting-description]
 
+#Dectroio
+DectWoodSpeed=[item=dect-wood-floor][color=brown]Ganghastighet[/color]
+DectConcreteGridSpeed=[item=dect-concrete-grid][color=#D3D3D3]Ganghastighet[/color]
+
+[mod-setting-description]
 #Base Game
 landfill-unlocked-from-start=[color=red]Mulig uopprettelig hvis aktivert.[/color]
 StoneBrickSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color][color=#D3D3D3]100% = 1, 1% = 0.01[/color][item=stone-brick]
@@ -67,9 +71,14 @@ overgrowth-yumako-soil-energy=Overgrowth Yumako Soil produksjons tid.\nFor stand
 
 overgrowth-jellynut-soil-results=Overgrowth Jellynut Soil resultat.\nFor standard [space-age] verdier klikk på reset knappen.
 overgrowth-jellynut-soil-energy=Overgrowth Jellynut Soil produksjons tid.\nFor standard [space-age] verdier klikk på reset knappen.
+
 #Transport Drones & Forked
 road-results=Vei resultat.\nFor standard [item=road]verdier klikk på reset knappen.
 road-energy=Vei produksjons tid.\nFor standard [item=road]verdier klikk på reset knappen.
 
 froad-results=Motorvei resultat.\nFor standard [item=fast-road]verdier klikk på reset knappen.
 froad-energy=Motorvei produksjons tid.\nFor standard [item=fast-road]verdier klikk på reset knappen.
+
+#Dectroio
+DectWoodSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color]\n[color=brown]100% = 1, 1% = 0.01[/color]
+DectConcreteGridSpeed=[color=red]Addvarsel: verdier lavere enn 1% har uforventende effekter.[/color]\n[color=#D3D3D3]100% = 1, 1% = 0.01[/color]
